--- a/first-spring-boot1/first-spring-boot/src/main/resources/application.properties
+++ b/first-spring-boot1/first-spring-boot/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.url=jdbc:mysql://localhost:3306/valtech2023?userSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/valtechnov2023?userSSL=false
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
