--- a/mobile-rating-app/mobile-rating-ui/.classpath
+++ b/mobile-rating-app/mobile-rating-ui/.classpath
@@ -37,5 +37,10 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Kruthik.B/Downloads/apache-tomcat-8.5.95-windows-x86/apache-tomcat-8.5.95/lib/servlet-api.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="https://docs.oracle.com/javaee/7/api/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
